kubernetes/develop/k8s-deployment.yml
###################################
# medical-record-users-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-record-users-api
  labels:
    app: medical-record-users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-record-users-api
  template:
    metadata:
      labels:
        app: medical-record-users-api
    spec:
      containers:
        - name: medical-record-users-api
          image: caprilespe/medical-record-users-api:1.0.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: medical-record-users-service
spec:
  type: LoadBalancer
  selector:
    app: medical-record-users-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
